[tool.poetry]
name = "nucleus"
version = "0.1.0"
description = "Handles SQLserver connections and core projects functionalities"
authors = ["Ben Liddington <liddingtonben@gmail.com>"]
readme = "README.md"
packages = [{include = "nucleus"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
pytest = "^8.0.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
nbformat = "^5.9.2"
ipykernel = "^6.29.2"
pytest-cov = "^4.1.0"
pypyodbc = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
